# llm-abstract-model

./: .gitignore  MakeAChain1.py  MakeAChain2.py  README.md  UsefulPrompts.py  custom_utils.py  dev.py  embeddings.json  ex.1.HowToUse.py  ex.2.1.MakeAChain.py  ex.2.2.MakeAChain(longText).py  ex.2.3.MakeAChain(longCode).py  ex.2.3.MakeAChain(longCode).working.py  ex.2.MakeAChain1.py  ex.20.CustomMT5.py  ex.4.CustomFunction.py  ex.4.CustomStores.py  ex.5.1.CustomWorkflow.py  ex.5.2.ComplexWorkflow.py  ex.5.CustomMT5.py  ex.5.CustomWorkflow.py  ex.6.1.TryAgents.py  ex.6.2.TryAgents.Self-Iterative.py  ex.6.CustomMT5.py  ex.6.TryAgents.py  ex.6.TryAgents.updating.py  ex.7.TryAgentsAndMemory.py  ex.7.TryAgentsAndMemory.working.py  ex.8.TryAgentsAndHistory.py  ex.9.WithMCP.py  ex.z.UsefulPrompts.py  ex_1_1_HowToUse.py  ex_1_2_HowToReUse.py  ex_2_1_MakeAChain.py  ex_2_2_MakeAChain(longText).py  ex_2_3_MakeAChain(longCode).py  ex_4_CustomStores.py  ex_5_1_CustomWorkflow.py  ex_5_2_ComplexWorkflow.py  ex_6_1_TryAgents.py  (+11 more)
LLMAbstractModel/: BasicModel.py  LLMsModel.py  MermaidWorkflowEngine.py  Storage.py  __init__.py  raptor_utils.py  rsa.py  utils.py
tauri-app/: index.html  package-lock.json  package.json  vite.config.ts
tests/: test_abstract_llm.py  test_abstract_vendor.py  test_raptor.py  test_texttiling.py
tmp/: RSA.py  embeddings.json  ex.1.1HowToUse.json  ex.20.store.rjson  letter_counter.py  private_key.pem  store.rjson  topicnodes.json
ts/: BasicModel.ts  LLMsModel.ts  RSA.ts  Storage.ts  ex.1.HowToUse.ts  ex.2.1.MakeAChain.ts  ex.2.2.MakeAChain(longText).ts  (+8 more)
(+24 files in other folders)
