[project]
name = "llm-abstract-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.11.3",
    "numpy>=2.3.1",
    "pydantic>=2.11.7",
    "pytz>=2025.2",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "google-genai>=1.31.0",
    "ipython>=9.4.0",
    "openai>=1.101.0",
]
